// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`eligibilityStatusCard for cas1 renders a NOT_STARTED status card 1`] = `
{
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "href": "https://example.com/start",
      "text": "Start application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a NOT_STARTED status card 1`] = `
{
  "heading": "CAS3 (transitional accommodation)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "href": "https://example.com/start",
      "text": "Start referral",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`eligibilityToEligibilityCards returns an array of eligibility card objects 1`] = `
[
  {
    "details": [
      {
        "key": {
          "text": "Submitted to",
        },
        "value": {
          "text": "Some Council",
        },
      },
      {
        "key": {
          "text": "Reference",
        },
        "value": {
          "text": "REF123",
        },
      },
      {
        "key": {
          "text": "Submitted",
        },
        "value": {
          "text": "1 December 2025 (51 days ago)",
        },
      },
      {
        "key": {
          "text": "Submitted by",
        },
        "value": {
          "text": "user1",
        },
      },
    ],
    "heading": "Duty to Refer (DTR)",
    "inactive": false,
    "links": [
      {
        "href": "/cases/X123456/dtr/some-id/details",
        "text": "View referral",
      },
    ],
    "status": {
      "colour": "yellow",
      "text": "Accepted",
    },
  },
  {
    "details": [
      {
        "key": {
          "text": "Submitted",
        },
        "value": {
          "text": "30 November 2025 (52 days ago)",
        },
      },
    ],
    "heading": "Commissioned Rehabilitative Services (CRS)",
    "hint": undefined,
    "inactive": false,
    "links": [
      {
        "href": "https://example.com/view-referral",
        "text": "View referral",
      },
    ],
    "status": {
      "colour": "yellow",
      "text": "Submitted",
    },
  },
  {
    "heading": "Approved premises (CAS1)",
    "hint": undefined,
    "inactive": false,
    "links": [
      {
        "href": "https://example.com/start-application",
        "text": "Start application",
      },
    ],
    "status": {
      "colour": "orange",
      "text": "Not started",
    },
  },
  {
    "heading": "CAS3 (transitional accommodation)",
    "hint": undefined,
    "inactive": false,
    "links": undefined,
    "status": {
      "colour": "green",
      "text": "Confirmed",
    },
  },
]
`;
